--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   rxdart: ^0.28.0
   cached_network_image: ^3.4.1
   http: ^1.2.2
+  shared_preferences: ^2.3.3
 
 
 dev_dependencies:
