--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cached_network_image: ^3.4.1
   http: ^1.2.2
   shared_preferences: ^2.3.3
+  path_provider: ^2.1.5
 
 
 dev_dependencies:
