--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.3
   path_provider: ^2.1.5
+  intl: ^0.19.0
+  logger: ^2.0.2
+  flutter_cache_manager: ^3.3.1
 
 
 dev_dependencies:
