--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.0.2
   flutter_cache_manager: ^3.3.1
+  cloud_functions: ^5.2.0
 
 
 dev_dependencies:
