--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   logger: ^2.0.2
   flutter_cache_manager: ^3.3.1
   cloud_functions: ^5.2.0
+  flutter_colorpicker: ^1.1.0
+ 
 
 
 dev_dependencies:
