--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   cloud_functions: ^5.2.0
   flutter_colorpicker: ^1.1.0
+  fl_chart: ^0.70.0
  
 
 
