--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   firebase_auth: ^5.3.3
   equatable: ^2.0.7
   google_fonts: ^6.2.1
-  mailer: ^6.2.0
   cloud_firestore: ^5.5.0
   google_sign_in: ^6.2.2
   rxdart: ^0.28.0
@@ -22,12 +21,14 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.3
   path_provider: ^2.1.5
-  intl: ^0.19.0
+  intl: ^0.20.1
   logger: ^2.0.2
   flutter_cache_manager: ^3.3.1
   cloud_functions: ^5.2.0
   flutter_colorpicker: ^1.1.0
   fl_chart: ^0.70.0
+  pdf: ^3.11.1
+  open_file: ^3.5.10
  
 
 
