--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,4 +42,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/img/cover.jpg
+    - assets/fonts/
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
   
